Closed Bug 1141066 Opened 9 years ago Closed 9 years ago

Fix a memory leak in mailnews/addrbook/src/nsAbCardProperty.cpp

Categories

(Thunderbird :: Address Book, defect)

defect
Not set
normal

Tracking

(thunderbird39 fixed)

RESOLVED FIXED
Thunderbird 39.0
Tracking Status
thunderbird39 --- fixed

People

(Reporter: Sylvestre, Assigned: Sylvestre)

Details

(Keywords: coverity)

Attachments

(1 file)

Found by coverity (cid 1287395)
Attached patch memory-leak.diffSplinter Review
Attachment #8574664 - Flags: review?(neil)
Attachment #8574664 - Flags: review?(neil) → review+
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/f3126fc6d739
Status: NEW → RESOLVED
Closed: 9 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 39.0
Assignee: nobody → sledru
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: