Bug 1141066 - Fix a memory leak if vCardHasData allocation failed. r=Neil